# go-docs-mcp

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  glama.json  go.mod  main.go  pyproject.toml
doc/: WHY-MCP.md
internal/pdf/: reader.go  reader_test.go
src/drolo_docs/: __init__.py  __main__.py  pdf_reader.py  server.py
